# typr

./: .env  .gitignore  Cargo.toml  PROJECT_PLAN.md  README.md  build.sh  config.json  deno.json  main.ts  package-lock.json  package.json  release.sh  rust-analyzer.toml  typr.ts
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: audio_processing.rs  lib.rs  store.rs  typing.rs
cli/: init.lua  linux.ts  mac.ts  main.ts  types.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_processing.rs  lib.rs  main.rs  store.rs  typing.rs
