[package]
name = "typr"
version = "0.1.0"
description = "Useful dictation."
authors = ["Justin Carrus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
# Audio recording dependencies
cpal = "0.15.2"
anyhow = "1.0.79"  # For error handling
# OpenAI API dependencies
reqwest = { version = "0.11.22", features = ["json", "stream", "multipart"] }
tokio = { version = "1.32.0", features = ["full"] }
# Utility dependencies
tempfile = "3.8.1"  # For temporary file handling
log = "0.4.20"  # For logging
env_logger = "0.10.0"  # For logging
indicatif = "0.17.5"  # For progress bars
enigo = "0.3.0"
chrono = "0.4"
mp3lame-encoder = "0.2.1" # Using a recent version

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

